"Bazel module dependencies, see https://bazel.build/external/overview#bzlmod"

bazel_dep(name = "aspect_bazel_lib", version = "1.33.0")
bazel_dep(name = "aspect_rules_lint", version = "0.12.0")
bazel_dep(name = "aspect_rules_jest", version = "0.19.6")
bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "2.2.0")
bazel_dep(name = "aspect_rules_rollup", version = "1.0.0")
bazel_dep(name = "aspect_rules_webpack", version = "0.13.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

archive_override(
    module_name = "aspect_rules_js",
    urls = ["https://github.com/aspect-build/rules_js/archive/7c3d145792389f2a4cacb94bd2f0b90a290c11e9.tar.gz"],
    strip_prefix = "rules_js-7c3d145792389f2a4cacb94bd2f0b90a290c11e9",
    integrity = "sha256-0c36QCdPzM4NhZv5cEo9G59VTVAg1Th5KZQvagmRQd8=",
)

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = {
        "@next/eslint-plugin-next": ["next.js"],
        "eslint-config-react-app": ["react"],
        "eslint@8.28.0": ["react"],
    },
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
