"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_oci", version = "1.4.0")
bazel_dep(name = "rules_java", version = "7.11.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.12",
        "com.google.guava:guava:28.0-jre",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
    ],
)
use_repo(maven, "maven")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:d62fde1bdf6fb595020fa945f45e2e651c1643c4512e9631edacf80508303cd4",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")
