"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "container_structure_test", version = "1.19.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_java", version = "7.11.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.12",
        "com.google.guava:guava:28.0-jre",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
    ],
)
use_repo(maven, "maven")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:f4329451b879886de6e0f1ac58ab3ca5adee9faeeb1f58ded0ad545afc7d4a31",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")
