bazel_dep(name = "aspect_rules_py", version = "0.7.1")
bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
bazel_dep(name = "rules_python", version = "0.31.0")

# Update to include
# https://github.com/bazelbuild/rules_proto/pull/206
git_override(
    module_name = "rules_proto",
    commit = "d373829e59d94c95e470f4250d9da4617c4951eb",
    remote = "https://github.com/bazelbuild/rules_proto.git",
)

# Update to include
# https://github.com/bazelbuild/rules_python/pull/1577
git_override(
    module_name = "rules_python",
    commit = "3edcae33dcc43051ca6f200c2d0cb3692df79d03",
    remote = "https://github.com/bazelbuild/rules_python.git",
)

register_toolchains("//toolchains:all")
