bazel_dep(name = "rules_ruby", version = "0.4.1")

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby_dist")
ruby.bundle(
    name = "bundle",
    srcs = ["//:Gemfile.lock"],
    env = {"BUNDLE_BUILD__GRPC": "--with-ldflags=-Wl,-undefined,dynamic_lookup"},
    gemfile = "//:Gemfile",
    toolchain = "@ruby_dist//:BUILD",
)
use_repo(ruby, "bundle", "ruby_toolchains")
