module(
    name = "example",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.1")

# 1. The metadata of ng-log is fetched from the BCR, including its dependencies (gflags).
# 2. The `repo_name` attribute allows users to reference this dependency via the `com_github_nglog_nglog` repo name.
bazel_dep(name = "ng-log", version = "0.8.0-rc1", repo_name = "com_github_nglog_nglog")

