module(
    name = "example",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.0.17")

# 1. The metadata of abseil-cpp is fetched from the BCR, including its dependencies (platforms).
# 2. The `repo_name` attribute allows users to reference this dependency via the `com_google_absl` repo name.
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
