module(
    name = "example",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.0.17")


# Patch bazel skylib 1.7.1 with a local patch file.
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(
    module_name = "bazel_skylib",
    patch_strip = 1,
    patches = ["//:bazel_skylib.patch"],
    version = "1.7.1",
)

# Depend on module lib_a at a local path.
# The bazel_dep statement is necessary because the root module must have visibility on lib_a.
bazel_dep(name = "lib_a", version = "")
local_path_override(
    module_name = "lib_a",
    path = "./lib_a",
)


