# load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

# new_git_repository(
#     name = "googletest",
#     build_file = "gmock.BUILD",
#     remote = "https://github.com/google/googletest",
#     tag = "release-1.11.0",
# )

bazel_dep(name = "googletest", version = "1.14.0")